Fix #11 : added "word-wrap: break-word" to .well.module blocks

--- a/home/static/home/css/base.css
+++ b/home/static/home/css/base.css
@@ -85,3 +85,6 @@ hr {
 .pagination {
 	display: inline-block;
 }
+.well.module {
+    word-wrap: break-word;
+}
